2011-09-18  Chong Yidong  <cyd@stupidchicken.com>

	* files.el (inhibit-first-line-modes-regexps): Add image files.
	(hack-local-variables-prop-line): Return nil for malformed
	prop-lines (Bug#9044).

2011-09-18  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (top): Don't require 'shell.
	(tramp-methods): Fix docstring.
	(tramp-get-remote-tmpdir): New defun, moved from tramp-sh.el.
	Return complete remote file name.  Handle "smb" case.  Use
	`tramp-tmpdir', if defined for the respective method.
	(tramp-make-tramp-temp-file): Adapt call of `tramp-get-remote-tmpdir'.

	* net/tramp-compat.el (top): Require 'shell.

	* net/tramp-sh.el (tramp-do-copy-or-rename-file-out-of-band)
	(tramp-maybe-open-connection): Use `tramp-file-name-real-host' for
	`tramp-current-host'.
	(tramp-get-remote-tmpdir): Remove.

	* net/tramp-smb.el (tramp-methods): Add `tramp-remote-shell' and
	`tramp-tmpdir' entries.
	(tramp-smb-errors): Add "NT_STATUS_IMAGE_ALREADY_LOADED".
	(tramp-smb-handle-file-attributes): Ignore errors.
	(tramp-smb-wait-for-output): Check also for process end.

2011-09-18  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* mail/smtpmail.el (smtpmail-via-smtp): Ignore errors that arise
	when sending QUIT (bug#9312).

2011-09-17  Chong Yidong  <cyd@stupidchicken.com>

	* replace.el (occur-mode-map): Rebind occur-edit-mode to "e" (Bug#8463).
	(occur-edit-mode-map): Bind C-c C-c to occur-cease-edit and C-o to
	occur-mode-display-occurrence.
	(occur-edit-mode): Add usage message.
	(occur-cease-edit): New command.
	(occur-after-change-function): Use text properties to find the
	position of the prefix text.
	(occur-engine): Set stickiness of prefix text properties.

2011-09-17  Glenn Morris  <rgm@gnu.org>

	* progmodes/etags.el (complete-tag):
	Fix call to completion-in-region.  (Bug#9526)

2011-09-17  Juri Linkov  <juri@jurta.org>

	* textmodes/ispell.el (ispell-word): Add to the error message
	the word, ispell program name and current dictionary (bug#9121).